fluxcd/apps/overlays/production/speedtest-tracker/service-speedtest-tracker-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  labels:
    policy.prplanit.com/ingress: "true"
