fluxcd/apps/overlays/production/speedtest-tracker/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-tracker-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Monitoring (Gossip Stone💬)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "isptest.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: speedtest-tracker
          port: 8080
